# vscode-cmake-valgrind

./: CMakeLists.txt  README.md  main.c
